--- a/src/components/sign-in/sign-in.styles.scss
+++ b/src/components/sign-in/sign-in.styles.scss
@@ -1,9 +1,15 @@
 .sign-in{
-    width: 40vw;
+    width: 480px;
     display: flex;
     flex-direction:column;
 
     .title {
         margin: 10px 0;
+    }
+
+    .buttons{
+        display: flex;
+        justify-content: space-between ;
+
     }
 }
